load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# based on the values for bazel 4.0 at
# https://github.com/bazelbuild/platforms
platform(
    name = "darwin_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "darwin_aarch64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

cc_library(
    
    copts = [
       "-std=c++20",
    #    "-framework",
    #    "ApplicationServices",
    #    "-framework Carbon",
    ],
    name = "tandem-tap-lib",
    srcs = ["src/tandem-tap.cpp", "include/tandem-tap.h"],
    target_compatible_with = [
       # "@bazel_tools//platforms:darwin_aarch64",
    ]
)


cc_binary(
    
    copts = [
        "-std=c++20",
    #    "-framework",
    #    "ApplicationServices",
    #    "-framework Carbon",
    ],
    name = "tandem-tap",
    srcs = ["src/tandem-tap-main.cpp", "include/tandem-tap.h"],
    deps = [
        "tandem-tap-lib"
    ],
    target_compatible_with = [
       # "@bazel_tools//platforms:darwin_x86_64",
    ]
)

cc_test(
    name = "tandem-tap-test",
    srcs = ["test/tandem-tap-test.cpp", "include/tandem-tap.h"],
    deps = [
        "//:tandem-tap-lib",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ]
)
